--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,7 @@
 [custom]
 ; ==========================================================
-; 2026 Dat 数据库适配版 - 修正匹配逻辑顺序
+; 2G 内存极致性能版 - 2026 适配 GeoIP/GeoSite Dat
+; 更新频率：172800秒 (2880分钟 / 2天)
 ; ==========================================================
 
 enable_rule_generator=true
@@ -10,21 +11,20 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (严格按照优先级排序)
+; 1) 规则部分 (严格优先级：拦截 > 海外应用 > 国内直连 > 补漏)
 ; ==========================================================
 
-; --- [第一级：绝对拦截与私有直连] ---
+; --- [第一级：拦截与私有网] ---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- [第二级：特定补丁规则] ---
-ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
-ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
+; --- [第二级：在线补丁 (已设为2天更新)] ---
+ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,172800
+ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,172800
 
-; --- [第三级：核心应用分流 (必须放在国内直连之前)] ---
-ruleset=📦 Notion,[]GEOSITE,notion
+; --- [第三级：核心海外应用 (确保走代理，不被国内库误杀)] ---
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=📨 Telegram,[]GEOSITE,telegram
@@ -38,6 +38,7 @@ ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
+ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
@@ -50,12 +51,12 @@ ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
 ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 
-; --- [第四级：基础设施与社交媒体] ---
+; --- [第四级：社交与通讯] ---
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; --- [第五级：国内直连补丁 (将之前的直连下移至此)] ---
+; --- [第五级：国内直连 (利用 Dat 数据库极速匹配)] ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,apple-cn
 ruleset=DIRECT,[]GEOSITE,cn
@@ -64,15 +65,15 @@ ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- [第六级：兜底与非标] ---
+; --- [第六级：核心调度与漏网之鱼兜底] ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
-ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
+ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,172800
+ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_Proxy_Classical_IP.yaml,172800
+ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,172800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 策略组设置 (保持原样即可)
+; 2) 策略组设置 (2G内存可随心切换)
 ; ==========================================================
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
