--- a/meta.ini
+++ b/meta.ini
@@ -1,8 +1,6 @@
 [custom]
 ; ==========================================================
-; 全能兼容版 - 适配 GeoIP Dat / MMDB 两种格式
-; 核心逻辑：GEOSITE 负责应用识别，GEOIP 只负责国家识别
-; 更新频率：172800秒 (2天)
+; 2026 Dat 数据库适配版 - 修正匹配逻辑顺序
 ; ==========================================================
 
 enable_rule_generator=true
@@ -12,44 +10,52 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (极高兼容性写法)
+; 1) 规则部分 (严格按照优先级排序)
 ; ==========================================================
 
-; --- [第一级：拦截与私有网] ---
+; --- [第一级：绝对拦截与私有直连] ---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
+ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- [第二级：在线补丁 (2天更新)] ---
-ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,172800
-ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,172800
+; --- [第二级：特定补丁规则] ---
+ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
+ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 
-; --- [第三级：核心海外应用 (全部改用 GEOSITE 兼容)] ---
+; --- [第三级：核心应用分流 (必须放在国内直连之前)] ---
+ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=📨 Telegram,[]GEOSITE,telegram
+ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
+ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 ruleset=🎵 TikTok,[]GEOSITE,tiktok
+ruleset=🎵 TikTok,[]GEOIP,tiktok,no-resolve
 ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
-ruleset=📦 Notion,[]GEOSITE,notion
+ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🔎 Google,[]GEOSITE,google
+ruleset=🔎 Google,[]GEOIP,google,no-resolve
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
+ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
+ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 
-; --- [第四级：社交与通讯] ---
+; --- [第四级：基础设施与社交媒体] ---
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; --- [第五级：国内直连 (这是最稳的国家代码)] ---
+; --- [第五级：国内直连补丁 (将之前的直连下移至此)] ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,apple-cn
 ruleset=DIRECT,[]GEOSITE,cn
@@ -58,15 +64,15 @@ ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- [第六级：核心调度与兜底] ---
+; --- [第六级：兜底与非标] ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
-ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,172800
-ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_Proxy_Classical_IP.yaml,172800
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_Port_Direct.yaml,172800
+ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
+ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
+ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 策略组设置 (2G内存可随心切换)
+; 2) 策略组设置 (保持原样即可)
 ; ==========================================================
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
