--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,7 @@
 [custom]
 ; ==========================================================
-; 2026 最终精简优化版 - 台湾/韩国并入冷门组
+; 2026 最终修正养老版 - 原链稳定性优先
+; 频率：240s (4分钟) | 节点：首选香港 (HK) | MMDB 模式
 ; ==========================================================
 
 enable_rule_generator=true
@@ -10,18 +11,18 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分
+; 1) 规则部分 (全原链配置)
 ; ==========================================================
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; Aethersailor 补丁
-ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
-ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
-ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
+; Aethersailor 补丁 (GitHub 原链)
+ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Domain.yaml,172800
+ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Classical_IP.yaml,172800
+ruleset=🚀 核心调度,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Domain.yaml,172800
+ruleset=🚀 核心调度,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Classical_IP.yaml,172800
 
 ; 国内直连
 ruleset=DIRECT,[]GEOSITE,google-cn
@@ -31,23 +32,18 @@ ruleset=DIRECT,[]GEOSITE,category-games@cn
 ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 
-; 核心应用
-ruleset=📦 Notion,[]GEOSITE,Notion
-ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
+; 核心海外应用
+ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=📨 Telegram,[]GEOSITE,telegram
-ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
-ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 ruleset=🎵 TikTok,[]GEOSITE,tiktok
-ruleset=🎵 TikTok,[]GEOIP,tiktok,no-resolve
 ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
-ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
@@ -58,64 +54,54 @@ ruleset=🟪 Bybit,[]GEOSITE,bybit
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
-ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 ruleset=🔎 Google,[]GEOSITE,google
-ruleset=🔎 Google,[]GEOIP,google,no-resolve
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
-ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 
 ; 兜底
 ruleset=🚀 核心调度,[]GEOSITE,gfw
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
+ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组 (清理了 TW 选项)
+; 2) 应用分流策略组 (HK 优先排布)
 ; ==========================================================
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
-custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📦 Notion`select`[]原链直连`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🌐 Default
+custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT`[]🌐 Default
+custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`
+custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🇭🇰 HK
+custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`
 
 ; ==========================================================
 ; 3) 核心调度层
 ; ==========================================================
-custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 全部节点
-custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
 
 ; ==========================================================
-; 4) 节点自动测速与全部节点池 (180s 稳健切换版)
-; 参数说明：间隔180s, 超时2000ms, 容差80ms, 禁用懒加载(false)
+; 4) 节点自动测速与全部节点池 (240s 终极对齐)
 ; ==========================================================
 custom_proxy_group=🧭 全部节点`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,2000,80`false
-
-; 【🧊 冷门节点】：包含韩国、台湾等非主流大区
-custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`180,2000,80`false
-
-; 【专属测速大区】
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`180,2000,80`false
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`180,2000,80`false
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`180,2000,80`false
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`180,2000,80`false
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`240,2000,80`false
+custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`240,2000,80`false
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|Hong_Kong|HongKong)`http://www.gstatic.com/generate_204`240,2000,80`false
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`240,2000,80`false
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`240,2000,80`false
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`240,2000,80`false
