--- a/meta.ini
+++ b/meta.ini
@@ -65,7 +65,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; ==========================================================
 ; 2) 应用分流策略组 (HK 优先排布)
 ; ==========================================================
-custom_proxy_group=📦 Notion`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+; 修正：Notion 的“原链直连”已更正为内置关键词 DIRECT
+custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
