--- a/meta.ini
+++ b/meta.ini
@@ -68,7 +68,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
