--- a/meta.ini
+++ b/meta.ini
@@ -1,43 +1,43 @@
 [custom]
 ; ==========================================================
-; 2026 最终修正养老版 - 原链稳定性优先
-; 频率：240s (4分钟) | 节点：首选香港 (HK) | MMDB 模式
+; 2026 终极优化稳定版
+; Google + AI + 流媒体 全优化
 ; ==========================================================
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
+; ----------------------------------------------------------
 ; 节点清洗
+; ----------------------------------------------------------
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
+
 ; ==========================================================
-; 1) 规则部分
+; 1️⃣ 规则层（从精确 → 宽泛）
 ; ==========================================================
-ruleset=🟥 Adobe,[]GEOSITE,adobe
-ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
+
+; --- 局域网 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; Aethersailor 补丁 (GitHub 原链)
-ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Domain.yaml,172800
-ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Classical_IP.yaml,172800
-ruleset=🚀 核心调度,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Domain.yaml,172800
-ruleset=🚀 核心调度,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Classical_IP.yaml,172800
+; --- Adobe（可断网）---
+ruleset=🟥 Adobe,[]GEOSITE,adobe
+ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 
-; 国内直连
+; --- 国内 ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
-ruleset=DIRECT,[]GEOSITE,category-games@cn
-ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
-ruleset=DIRECT,[]GEOSITE,category-public-tracker
 
-; 核心海外应用
-ruleset=📦 Notion,[]GEOSITE,notion
-ruleset=📨 Telegram,[]GEOSITE,telegram
+; --- AI ---
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=✨ Gemini,[]GEOSITE,google-gemini
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
+
+; --- 常用海外 ---
+ruleset=📦 Notion,[]GEOSITE,notion
+ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
@@ -45,68 +45,72 @@ ruleset=🎵 TikTok,[]GEOSITE,tiktok
 ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
-ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 ruleset=🎮 Steam,[]GEOSITE,steam
-ruleset=🟦 OKX,[]GEOSITE,okx
-ruleset=🟨 Binance,[]GEOSITE,binance
-ruleset=🟪 Bybit,[]GEOSITE,bybit
+ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-
-; 基础设施
-ruleset=📞 即时通讯,[]GEOSITE,category-communication
-ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
-ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
+; --- 基础设施 ---
 ruleset=🔎 Google,[]GEOSITE,google
+ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 
-; 兜底
+; --- GFW ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
+
+; --- 非标端口 ---
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
+
+; --- 最终兜底 ---
 ruleset=🐟 漏网之鱼,[]FINAL
 
-; ==========================================================
-; 2) 应用分流策略组
-; ==========================================================
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
-custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT`[]🌐 Default
-custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`
-custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
-custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
-custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
-custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🇭🇰 HK
-custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`
+
 
 ; ==========================================================
-; 3) 核心调度层
+; 2️⃣ 应用策略组（SG 优先原则）
 ; ==========================================================
-custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
+
+custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
+custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
+custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK`[]🌐 Default
+
+custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG
+custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🎥 Netflix`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK
+custom_proxy_group=🎵 TikTok`select`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇸🇬 SG
+custom_proxy_group=🐦 X`select`[]🇸🇬 SG`[]🇯🇵 JP
+custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇸🇬 SG`[]DIRECT
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK
+custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度
+custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT
+custom_proxy_group=🔎 Google`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US
+custom_proxy_group=☁️ cloudflare`select`[]🇸🇬 SG`[]🇭🇰 HK
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG
+
+
+
+; ==========================================================
+; 3️⃣ 核心调度层
+; ==========================================================
+
+custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
+
+
 ; ==========================================================
-; 4) 节点自动测速与全部节点池
+; 4️⃣ 自动测速（HTTPS 更真实）
 ; ==========================================================
+
 custom_proxy_group=🧭 全部节点`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`240,2000,80`false
-custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`240,2000,80`false
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|Hong_Kong|HongKong)`http://www.gstatic.com/generate_204`240,2000,80`false
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`240,2000,80`false
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`240,2000,80`false
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`240,2000,80`false
+
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,2000,80`false
+
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,2000,80`false
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`https://www.gstatic.com/generate_204`300,2000,80`false
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,2000,80`false
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`https://www.gstatic.com/generate_204`300,2000,80`false
